--- a/deployment/kubernetes/direct-deal-transaction-history-service.yml
+++ b/deployment/kubernetes/direct-deal-transaction-history-service.yml
@@ -50,7 +50,7 @@ spec:
             done
       containers:
       - name: transaction-history-service
-        image: gcr.io/${PROJECT_ID}/direct-deal-transaction-history-service:${REVISION_ID}
+        image: direct-deal-transaction-history-service:dummy
         imagePullPolicy: Always
         env:
         - name: SPRING_PROFILES_ACTIVE
