--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Ignore Gradle project-specific cache directory
+.idea
 .gradle
 .project
 .settings
-*.tar
-*.tar.gz
 
 # Ignore Gradle build output directory
 build
