feat: Implement Static IP for Nginx LoadBalancer
- Configured the Nginx LoadBalancer Service to utilize a static IP address, defined
by the  environment variable.
- Applied the changes using Kustomize, patching the  Service definition.

--- a/deployment/kubernetes/overlays/gcp/kustomization.yaml
+++ b/deployment/kubernetes/overlays/gcp/kustomization.yaml
@@ -1,6 +1,12 @@
 resources:
   - ../../base
 
+patches:
+  - path: patch-nginx-service.yaml
+    target:
+      kind: Service
+      name: nginx
+
 images:
   - name: direct-deal-account-service
     newName: gcr.io/${PROJECT_ID}/direct-deal-account-service
