--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -236,6 +236,7 @@ steps:
     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
     - 'PROJECT_ID=$PROJECT_ID'
     - 'REVISION_ID=$REVISION_ID'
+    - 'STATIC_IP=$_STATIC_IP'
   waitFor:
     - docker-push-account-service
     - docker-push-chatting-service
