fix: re-apply missing spring-cloud-kubernetes-config.yml
- Added missing RBAC configuration (spring-cloud-kubernetes-config.yml) required for spring.cloud.kubernetes to read Spring Boot config values
- The file was present in the local Kubernetes environment, so the issue went unnoticed
- In earlier GKE deployments, the file was included in the original cloudbuild.yaml, which masked the problem
- The issue emerged after switching to the new kustomize-based cloudbuild.yaml, where the file was unintentionally omitted
- The missing file was discovered during a recent GKE cluster re-creation and has now been fixed

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -227,6 +227,7 @@ steps:
       set -e
       echo "Applying deployment for all services"
       apt-get update && apt-get install -y gettext-base
+      kubectl apply -f ./deployment/kubernetes/spring-cloud-kubernetes-config.yml
       kubectl kustomize ./deployment/kubernetes/overlays/gcp | envsubst | kubectl apply -n default -f -
       kubectl apply -f ./deployment/kubernetes/mongo-service.yml
       kubectl apply -f ./deployment/kubernetes/zookeeper-service.yml
