fix: adjust test codes for springboot-3.2.12
- adjust test codes for springboot-3.2.12
- adjust test codes for spring-security-test 6.2
- adjust test codes for mockito-core 5.19
- add test coverage configurations in gradle.build
- adjust spring bootsettings to 'spring.config.import=optional:kubernetes:'

--- a/buildSrc/src/main/groovy/kr.co.directdeal.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/kr.co.directdeal.java-common-conventions.gradle
@@ -72,9 +72,9 @@ dependencies {
 	    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
     
         runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-        testImplementation 'org.mockito:mockito-inline:3.9.0'
+        testImplementation 'org.mockito:mockito-core:5.19.0'
     }
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.12'
-	testImplementation 'org.springframework.security:spring-security-test:5.5.0'
+	testImplementation 'org.springframework.security:spring-security-test:6.1.2'
 }
