--- a/direct-deal-sale-catalog-service-webflux/build.gradle
+++ b/direct-deal-sale-catalog-service-webflux/build.gradle
@@ -64,5 +64,10 @@ dependencies {
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+        exceptionFormat = 'full'
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
 }
