--- a/direct-deal-chatting-service/build.gradle
+++ b/direct-deal-chatting-service/build.gradle
@@ -28,14 +28,22 @@ dependencies {
 
 	//implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all'
 	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-config'
-	runtimeOnly 'mysql:mysql-connector-java'
-
     implementation 'io.swagger.core.v3:swagger-annotations'
 
+    runtimeOnly 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	testImplementation 'org.mockito:mockito-inline'
+//	testImplementation 'org.mockito:mockito-inline'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+        exceptionFormat = 'full'
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
 }
