--- a/direct-deal-chatting-service/src/main/resources/application.properties
+++ b/direct-deal-chatting-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=direct-deal-chatting-service
-spring.config.import=kubernetes:
+spring.config.import=optional:kubernetes:
 
 spring.cloud.kubernetes.discovery.enabled=false
 spring.cloud.kubernetes.config.enabled=true
